2000-06-07  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-utils.c (gnc_ui_install_field_strings): set the
	code even if it's blank. Auto-coding doesn't work right now.

2000-06-06  Dave Peticolas  <dave@krondo.com>

	* src/SplitLedger.c (LedgerTraverse): use correct argument for
	exact_cell to gnc_table_find_valid_cell_horiz.
	(LedgerMoveCursor): ditto.

	* src/register/splitreg.c (xaccInitSplitRegister): Don't blank
	zeros in the price cell.

	* src/guile/gfec.c: fix bugs in usage of internal guile functions.
	more cleanup.

2000-06-05  Dave Peticolas  <dave@krondo.com>

	* src/register/splitreg.c (xaccInitSplitRegister): use higher
	precision for stock prices.

	* src/<lots>: moved gui-dependent definitions from
	src/engine/gnc-common.h to src/engine/gnc-ui-common.h.
	Use guint32 instead of home-grown typedef. This touched
	many files.

	* src/guile/guile-util.c (gnc_get_debit_string): make sure to
	return a malloc'd string.

	* src/register/splitreg.c (configLabels): check for NULL strings
	from the label getters.

	* src/gnome/window-register.c (gnc_register_date_window): if 'show
	all transactions' is not set in the preferences, limit it to
	30. Temporary fix for 1.4, this should be configurable.

	* configure.in: changed '! test' to 'test !'.

	* src/engine: removed *Consolidate* functions. These were cruft
	used by the old QIFIO routines.

2000-06-04  Dave Peticolas  <dave@krondo.com>

	* src/engine/util.c: add log level modification functions.

	* src/scm/command-line.scm: add a --loglevel argument to set the
	logging level.

2000-06-04  Rob Browning  <rlb@cs.utexas.edu>

	* */Makefile.am and others: fix up make dist to build a full-blown
	tarfile.

2000-06-04  Dave Peticolas  <dave@krondo.com>

	* src/engine/Session.c (xaccSessionSave): record file writing errors
	in the session error code.

	* src/FileDialog.c (gncFileSave): print an error message in a dialog
	on file-writing errors.
